<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:orientation="vertical">

    <TextView
        android:id="@+id/tvRecordDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:text="@string/duration_initial"
        android:textColor="@color/md_black_1000"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/ivRecordButton"
        app:layout_constraintRight_toRightOf="@+id/ivRecordButton"
        app:layout_constraintTop_toBottomOf="@+id/ivRecordButton"
        />

    <ImageView
        android:id="@+id/ivRecordButton"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_button"
        android:contentDescription="@string/start_recording"
        android:padding="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mic"/>

    <view
        android:id="@+id/soundMeter"
        class="ridvan.wakbaz.views.SoundMeterView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"/>

    <Switch
        android:id="@+id/switchVibration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/vibration"
        app:layout_constraintLeft_toLeftOf="@+id/switchWearVibration"
        app:layout_constraintRight_toRightOf="@+id/switchWearVibration"
        app:layout_constraintTop_toBottomOf="@+id/switchWearVibration"
        />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/page_main_title"
        android:textColor="@color/md_black_1000"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvAlarmsInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/alarms_count"
        app:layout_constraintLeft_toLeftOf="@+id/tvTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"/>

    <Switch
        android:id="@+id/switchWearVibration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/vibration_for_wear"
        app:layout_constraintBottom_toBottomOf="@+id/soundMeter"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>